--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
-    "react": "^15.6.2",
-    "react-cellblock": "^3.0.4",
-    "react-dom": "^15.6.2",
-    "react-jsonschema-form": "^0.51.0",
-    "react-web-tabs": "^0.4.3",
+    "react": "latest",
+    "react-cellblock": "latest",
+    "react-dom": "latest",
+    "react-jsonschema-form": "latest",
+    "react-web-tabs": "latest",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1"
   },
   "scripts": {
